Affichage ville et code de reducation

--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -22,6 +22,20 @@
                 </f:facet>
                 <h:outputText value="#{item.name}"/>
             </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Ville"/>
+                </f:facet>
+                <h:outputText value="#{item.city}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Code de reducation"/>
+                </f:facet>
+                <h:outputText value="#{item.discount.code} : #{item.discount.rate} %" />
+            </h:column>
         </h:dataTable>
     </h:body>
 </html>
