--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -36,6 +36,13 @@
                 </f:facet>
                 <h:outputText value="#{item.discount.code} : #{item.discount.rate} %" />
             </h:column>
+            
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="ZIP"/>
+                </f:facet>
+                <h:outputText value="#{item.zip.zipCode}" />
+            </h:column>
         </h:dataTable>
     </h:body>
 </html>
