--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -2,47 +2,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
-      xmlns:f="jakarta.faces.core">
+      xmlns:f="jakarta.faces.core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Liste des clients</title>
     </h:head>
     <h:body>
-        <h:dataTable value="#{customerBean.customers}"
-                     var="item">
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="Id"/>
-                </f:facet>
-                <h:outputText value="#{item.customerId}"/>
-            </h:column>
+        <h:form>
+            <p:dataTable paginator="true" 
+                         rows="10"  
+                         rowsPerPageTemplate="2,4,8,10" 
+                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" 
+                         value="#{customerBean.customers}"
+                         var="item">
+                <p:column sortBy="#{item.customerId}">
+                    <f:facet name="header">
+                        <h:outputText value="Id"/>
+                    </f:facet>
+                    <h:outputText value="#{item.customerId}"/>
+                </p:column>
 
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="Nom"/>
-                </f:facet>
-                <h:outputText value="#{item.name}"/>
-            </h:column>
+                <p:column sortBy="#{item.name}" filterBy="#{item.name}">
+                    <f:facet name="header">
+                        <h:outputText value="Nom"/>
+                    </f:facet>
+                    <h:outputText value="#{item.name}"/>
+                </p:column>
 
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="Ville"/>
-                </f:facet>
-                <h:outputText value="#{item.city}"/>
-            </h:column>
+                <p:column sortBy="#{item.city}">
+                    <f:facet name="header">
+                        <h:outputText value="Ville"/>
+                    </f:facet>
+                    <h:outputText value="#{item.city}"/>
+                </p:column>
 
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="Code de reducation"/>
-                </f:facet>
-                <h:outputText value="#{item.discount.code} : #{item.discount.rate} %" />
-            </h:column>
-            
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="ZIP"/>
-                </f:facet>
-                <h:outputText value="#{item.zip.zipCode}" />
-            </h:column>
-        </h:dataTable>
+                <p:column sortBy="#{item.discount.code}">
+                    <f:facet name="header">
+                        <h:outputText value="Code de reducation"/>
+                    </f:facet>
+                    <h:outputText value="#{item.discount.code} : #{item.discount.rate} %" />
+                </p:column>
+
+                <p:column sortBy="#{item.zip.zipCode}">
+                    <f:facet name="header">
+                        <h:outputText value="ZIP"/>
+                    </f:facet>
+                    <h:outputText value="#{item.zip.zipCode}" />
+                </p:column>
+
+                <p:column sortBy="#{item.state}" filterBy="#{item.state}">
+                    <f:facet name="header">
+                        <h:outputText value="Etat"/>
+                    </f:facet>
+                    <h:outputText value="#{item.state}" />
+                </p:column>
+            </p:dataTable>
+        </h:form>
     </h:body>
 </html>
