details Customer et fix persistence

--- a/src/main/webapp/customerDetails.xhtml
+++ b/src/main/webapp/customerDetails.xhtml
@@ -39,7 +39,10 @@
                     <h:outputLabel value="Discount:" for="discount" />
                     <h:selectOneMenu id="discount" value="#{customerDetailsBean.customer.discount}" title="Discount" required="true" requiredMessage="The Discount field is required.">
                         <!-- TODO: update below reference to list of available items-->
-                        <f:selectItems value="#{fixme}"/>
+                        <f:selectItems value="#{customerDetailsBean.discounts}"  
+                                       var="discount"   
+                                       itemLabel="#{discount.code} : #{discount.rate} %" 
+                                       itemValue="#{discount}" />
                     </h:selectOneMenu>
                 </h:panelGrid>
             </h:form>
