--- a/src/main/webapp/customerDetails.xhtml
+++ b/src/main/webapp/customerDetails.xhtml
@@ -13,7 +13,8 @@
     </h:head>
     <h:body>
         <f:view>
-            <h:form>
+            <h:outputText value="Aucun client avec l'id #{customerDetailsBean.idCustomer} !" rendered='#{customerDetailsBean.customer == null}'/>
+            <h:form  rendered='#{customerDetailsBean.customer != null}'>
                 <h1><h:outputText value="Create/Edit"/></h1>
                 <h:panelGrid columns="2">
                     <h:outputLabel value="CustomerId:" for="customerId" />
