--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -60,11 +60,11 @@
                     <h:outputText value="#{item.zip.zipCode}" />
                 </p:column>
 
-                <p:column sortBy="#{item.state}" filterBy="#{item.state}">
+                <p:column sortBy="#{item.state} #{item.city}" filterBy="#{item.state}">
                     <f:facet name="header">
                         <h:outputText value="Etat"/>
                     </f:facet>
-                    <h:outputText value="#{item.state}" />
+                    <h:outputText value="#{item.state}"/>
                 </p:column>
             </p:dataTable>
         </h:form>
